--- a/Masar'sbot.html
+++ b/Masar'sbot.html
@@ -14,7 +14,7 @@
 </head>
 <body>
 	<div class="welcome-message">
-<!-- Change the text here -->
+<!-- TODO Change the text here -->
 		<h1>Welcome to Masar's Challenge</h1>
 		<h4>Adjust chatGPT to be an expert in the field you desire and deploy it on your own website!</h4>
 
