--- a/Masar'sbot.html
+++ b/Masar'sbot.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Space Chatbot</title>
+	<title>programming Chatbot</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
@@ -15,11 +15,13 @@
 <body>
 	<div class="welcome-message">
 <!-- TODO Change the text here -->
-		<h1>Welcome to Masar's Challenge</h1>
-		<h4>Adjust chatGPT to be an expert in the field you desire and deploy it on your own website!</h4>
+		<h1>Welcome</h1>
+		<h4>To your programming assistante!</h4>
 
 		<div class="txt">
-			<p>Type your question in the chat after pressing on the icon below </p>
+			<p>Type your question in the chat after pressing on the icon below 
+				
+			</p>
 		</div>
 	</div>
 	<button id="welcome-message" class="chatbot-toggler">
