--- a/Masar'sbot.html
+++ b/Masar'sbot.html
@@ -34,7 +34,7 @@
 		<ul class="chatbox">
 			<li class="chat incoming">
 				<span class="material-symbols-outlined">smart_toy</span>
-				<p>Hi there <br> How can I help you today?</p>
+				<p>Hi there <br>Paste an article link & i'll return summary for you to read</p>
 			</li>
 		</ul>
 		<div class="chat-input">
