👌 IMPROVE: hidden private key

--- a/Masar'sbot.html
+++ b/Masar'sbot.html
@@ -10,7 +10,7 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Cairo:wght@300;500;700&family=Smooch+Sans:wght@200;300;500;600;700;800&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0">
-	<script src="script.js" defer></script>
+	<script src="script.js" defer type="module"></script>
 </head>
 <body>
 	<div class="welcome-message">
