--- a/Masar'sbot.html
+++ b/Masar'sbot.html
@@ -15,8 +15,7 @@
 <body>
 	<div class="welcome-message">
 <!-- TODO Change the text here -->
-		<h1>Welcome to Masar's Challenge</h1>
-		<h4>Adjust chatGPT to be an expert in the field you desire and deploy it on your own website!</h4>
+		<h1>LAWYER</h1>
 
 		<div class="txt">
 			<p>Type your question in the chat after pressing on the icon below </p>
@@ -34,7 +33,7 @@
 		<ul class="chatbox">
 			<li class="chat incoming">
 				<span class="material-symbols-outlined">smart_toy</span>
-				<p>Hi there <br> How can I help you today?</p>
+				<p> HI! <br> How Can I help You ?</p>
 			</li>
 		</ul>
 		<div class="chat-input">
